src/components/styles/media.css
@media only screen and (max-width: 600px) {


  .ul-nav {
    text-align: center;
  }

  .content-container {
    margin-left: 0;
  }

  .title-h1 {
    font-size: 1.2rem;
    margin-left: 0.7rem;
  }

  .line {
    margin-top: 0.2rem;
  }

  .title-content {
    font-size: 2rem;
    text-align: center;
  }

  .title-items {
    flex-direction: column;
    align-items: center;
    text-align: center;
    margin-right: 0;
  }

  .content-container > a {
    margin-left: 0;
  }

  .title-anchor {
    width: 50%;
    min-width: 10%;
  }

  .p-secondary {
    font-size: 1.5rem;
    width: 100%;
  }

  .title-about {
    font-size: 3rem;
  }

  .about {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    text-align: center;
    align-items: center;
    gap: 0px;
 
  }

  .contact-btn {
    min-width: 50%;
  }


  .title-projects {
    font-size: 3rem;
  
  }

  .tertiary-container {
    text-align: center;
    align-items: center;
    justify-content: space-evenly;
  }

  .p-skills { 
    font-size: 1.5rem;
    width: 100%;
    text-align: center;
  }

  .title-skills {
    font-size: 3rem;
    text-align: center;
    
  }

  .skills {
    margin-left: 0;
  }
}


@media only screen and (min-width: 601px) and (max-width: 1024px) {
  .container {
      width: 70%;
  }
}

@media only screen and (min-width: 1025px) {
  .container {
      width: 50%;
  }
}

